ajout check course

--- a/xaml_datas/MainWindow.xaml
+++ b/xaml_datas/MainWindow.xaml
@@ -12,7 +12,7 @@
                 <StackPanel>
                     <DockPanel>
                         <StackPanel>
-                            <Grid>
+                            <Grid Margin="10">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="*" />
