Cadre des items légèrement moins large pour les différencier des cadres globaux

--- a/xaml_datas/CheckScreen_Global.xaml
+++ b/xaml_datas/CheckScreen_Global.xaml
@@ -26,7 +26,7 @@
                            Text="{Binding Comment}"></TextBlock>
                 </StackPanel>
                 <StackPanel>
-                    <ListView HorizontalAlignment="Center" x:Name="CheckScreen_lsv" Visibility="Collapsed">
+                    <ListView HorizontalAlignment="Right" x:Name="CheckScreen_lsv" Visibility="Collapsed">
                     </ListView>
                 </StackPanel>
 
