--- a/xaml_datas/MainWindow.xaml
+++ b/xaml_datas/MainWindow.xaml
@@ -11,7 +11,7 @@
             <StackPanel  Orientation="Vertical">
                 <StackPanel>
                     <DockPanel>
-                        <StackPanel>
+                        <StackPanel Width="1000">
                             <Grid Margin="10" Background="AntiqueWhite">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*" />
@@ -24,29 +24,39 @@
                                     <RowDefinition Height="*" />
                                     <RowDefinition Height="*" />
                                 </Grid.RowDefinitions>
-                                <TextBlock Grid.Row="0" Grid.Column ="0" FontSize="15" FontWeight="Bold" Text="{Binding PatientFullName}" Background="{Binding sexBackgroundColor}" Foreground="{Binding  sexForegroundColor}" ToolTip="{Binding strPatientDOB}" TextAlignment="Center"></TextBlock>
-                                <TextBlock Grid.Row="0" Grid.Column ="1" FontSize="15" Text="{Binding DoctorName}" Background="Wheat" Foreground="Black" TextAlignment="Center" ToolTip="Prescripteur"></TextBlock>
-                                <Ellipse Grid.Row="0" Grid.Column ="1"  Fill="{Binding DoctorBackgroundColor}" Width="15" Height="15" HorizontalAlignment="Right" StrokeThickness="2" Stroke="Black" ToolTip="couleur RT"/>
                                 
-                                <TextBlock Grid.Row="1" Grid.Column ="0" FontSize="15" Text="{Binding PlanAndCourseID}" Background="AntiqueWhite" Foreground="MidnightBlue" ToolTip="planID (CourseID)" TextAlignment="Center" VerticalAlignment="Center"></TextBlock>
-                                <TextBlock Grid.Row="1" Grid.Column ="1" FontStyle="Italic" TextWrapping="WrapWithOverflow" FontSize="15" Text="{Binding prescriptionComment}" Background="AntiqueWhite"  Foreground="MidnightBlue" ToolTip="Nom, version et commentaire de la prescription" TextAlignment="Center"></TextBlock>
-                                <TextBlock  Grid.Row="2" Grid.Column ="0" FontSize="15" Text="{Binding theMachine}" Background="{Binding machineBackgroundColor}" Foreground="{Binding  machineForegroundColor}"  ToolTip="Nom de la machine" TextAlignment="Center" VerticalAlignment="Center"></TextBlock>
-                                <TextBlock  Grid.Row="2" Grid.Column ="1" TextWrapping="WrapWithOverflow" FontSize="15" Text="{Binding theFields}" TextAlignment="Center"  Background="Wheat" Foreground="Black" ToolTip="Description des champs"></TextBlock>
-                                <TextBlock  Grid.Row="3" Grid.Column ="0" FontSize="15" Text="{Binding CurrentUserName}" Background="{Binding CurrentUserBackgroundColor}" Foreground="{Binding  CurrentUserForegroundColor}" TextAlignment="Center" VerticalAlignment="Center" ToolTip="user name"></TextBlock>
-                                <TextBlock  Grid.Row="3" Grid.Column ="1" FontSize="15" Text="{Binding PlanCreatorName}" Background="AntiqueWhite" Foreground="MidnightBlue" ToolTip="créateur du plan"  TextAlignment="Center"></TextBlock>
-                                <Ellipse Grid.Row="3" Grid.Column ="1"  Fill="{Binding PlanCreatorBackgroundColor}" Width="15" Height="15" HorizontalAlignment="Right"  StrokeThickness="2" Stroke="Black" ToolTip="couleur dosimétriste" />
+                                <!-- PATIENT -->
+                                <TextBlock Grid.Row="0" Grid.Column ="0" FontSize="15" FontWeight="Bold" Text="{Binding PatientFullName}" Background="{Binding sexBackgroundColor}" Foreground="{Binding  sexForegroundColor}" ToolTip="{Binding strPatientDOB}" TextAlignment="Left"></TextBlock>
+                                
+                                <!-- DOCTEUR -->
+                                <TextBlock Grid.Row="0" Grid.Column ="1" FontSize="15" Text="{Binding DoctorName}" Background="Wheat" Foreground="Black" TextAlignment="Right" ToolTip="Prescripteur"></TextBlock>
+                                <Ellipse Grid.Row="0" Grid.Column ="1"  Fill="{Binding DoctorBackgroundColor}" Width="15" Height="15" HorizontalAlignment="Right" StrokeThickness="2" Stroke="{Binding DoctorForegroundColor}" ToolTip="couleur RT"/>
+                                
+                                <!-- Plan ID -->
+                                <TextBlock Grid.Row="1" Grid.Column ="0" FontSize="15" Text="{Binding PlanAndCourseID}" Background="AntiqueWhite" Foreground="MidnightBlue" ToolTip="planID (CourseID)" TextAlignment="Left" VerticalAlignment="Center"></TextBlock>
+                                
+                                <!-- Commentaire prescription -->
+                                <TextBlock Grid.Row="1" Grid.Column ="1" FontStyle="Italic" TextWrapping="WrapWithOverflow" FontSize="15" Text="{Binding prescriptionComment}" Background="AntiqueWhite"  Foreground="MidnightBlue" ToolTip="Nom, version et commentaire de la prescription" TextAlignment="Right"></TextBlock>
+                                
+                                <!-- Machine -->
+                                <TextBlock  Grid.Row="2" Grid.Column ="0" FontSize="15" Text="{Binding theMachine}" Background="Wheat" Foreground="Black"  ToolTip="Nom de la machine" TextAlignment="Left" VerticalAlignment="Center"></TextBlock>
+                                <Ellipse Grid.Row="2" Grid.Column ="0"  Fill="{Binding machineBackgroundColor}" Width="15" Height="15" HorizontalAlignment="Left"  StrokeThickness="2" Stroke="{Binding machineForegroundColor}" ToolTip="couleur user" />
+                                <!-- TextBlock  Grid.Row="2" Grid.Column ="0" FontSize="15" Text="{Binding theMachine}" Background="{Binding machineBackgroundColor}" Foreground="{Binding  machineForegroundColor}"  ToolTip="Nom de la machine" TextAlignment="Center" VerticalAlignment="Center"></TextBlock -->
 
-
-                            </Grid>                          
-
-
+                                <!-- Champs -->
+                                <TextBlock  Grid.Row="2" Grid.Column ="1" TextWrapping="WrapWithOverflow" FontSize="15" Text="{Binding theFields}" TextAlignment="Right"  Background="Wheat" Foreground="Black" ToolTip="Description des champs"></TextBlock>
+                                
+                                <!-- User -->
+                                <TextBlock  Grid.Row="3" Grid.Column ="0" FontSize="15" Text="{Binding CurrentUserName}" Background="AntiqueWhite" Foreground="MidnightBlue" TextAlignment="Left" VerticalAlignment="Center" ToolTip="user name"></TextBlock>
+                                <Ellipse Grid.Row="3" Grid.Column ="0"  Fill="{Binding CurrentUserBackgroundColor}" Width="15" Height="15" HorizontalAlignment="Left"  StrokeThickness="2" Stroke="{Binding CurrentUserForegroundColor}" ToolTip="couleur user" />
+                                
+                                <!-- Plan creator -->
+                                <TextBlock  Grid.Row="3" Grid.Column ="1" FontSize="15" Text="{Binding PlanCreatorName}" Background="AntiqueWhite" Foreground="MidnightBlue" ToolTip="créateur du plan"  TextAlignment="Right"></TextBlock>
+                                <Ellipse Grid.Row="3" Grid.Column ="1"  Fill="{Binding PlanCreatorBackgroundColor}" Width="15" Height="15" HorizontalAlignment="Right"  StrokeThickness="2" Stroke="{Binding PlanCreatorForegroundColor}" ToolTip="couleur dosimétriste" />
+                            </Grid>
                         </StackPanel>
-                        
-
                     </DockPanel>
-
                 </StackPanel>
-
                 <StackPanel>
                     <ListView HorizontalAlignment="Center" x:Name="CheckList">
                     </ListView>
