Un commit qui marche bien (choix du protocole hard codé)

--- a/xaml_datas/MainWindow.xaml
+++ b/xaml_datas/MainWindow.xaml
@@ -93,7 +93,7 @@
                 </StackPanel>
 
                 <StackPanel>
-                    <ListView HorizontalAlignment="Center" x:Name="CheckList">
+                    <ListView HorizontalAlignment="Center" x:Name="CheckList" Visibility="Hidden">
                     </ListView>
                 </StackPanel>
             </StackPanel>
