--- a/xaml_datas/MainWindow.xaml
+++ b/xaml_datas/MainWindow.xaml
@@ -77,11 +77,11 @@
 
                             <!--StackPanel Grid.Row="0" Grid.Column ="0" Width="730" Height="33" HorizontalAlignment="Right" Background="White"-->
 
-                            <TextBlock x:Name="defaultProtocol" Grid.Row="0" Grid.Column ="0" FontSize="16"  Background="White"  Foreground="DarkBlue" FontWeight="Bold" ToolTip="Protocole proposé" VerticalAlignment="Center" Text="{Binding theProtocol}" HorizontalAlignment="Center"></TextBlock>
-                           
-                            <Button Grid.Row="0" Grid.Column ="1" x:Name="Verif_button" Content="Modifier..." Width="110" Height="32" Click="Choose_file_button_Click" RenderTransformOrigin="-0.734,0.136"/>
+                            <TextBlock x:Name="defaultProtocol" Grid.Row="0" Grid.Column ="0" FontSize="16"  Background="White"  Foreground="DarkBlue" FontWeight="Bold" ToolTip="Check-protocol proposé" VerticalAlignment="Center" Text="{Binding theProtocol}" HorizontalAlignment="Center"></TextBlock>
 
-                            <Button Grid.Row="0" Grid.Column ="2" x:Name="OK_button" Content="OK" Width="110" Height="32" Click="OK_button_click" RenderTransformOrigin="-0.734,0.136"/>
+                            <Button Grid.Row="0" Grid.Column ="1" x:Name="Verif_button" Content="Modifier..." Width="110" Height="32" Click="Choose_file_button_Click" ToolTip="Choisir un autre check-protocol" RenderTransformOrigin="-0.734,0.136"/>
+
+                            <Button Grid.Row="0" Grid.Column ="2" x:Name="OK_button" Content="OK" Width="110" Height="32" Click="OK_button_click" ToolTip="Lancer la vérification" RenderTransformOrigin="-0.734,0.136"/>
 
                         </Grid>
                     </Border>
