--- a/xaml_datas/CheckScreen_Global.xaml
+++ b/xaml_datas/CheckScreen_Global.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="PlanCheck_IUCT.CheckScreen_Global"
+﻿<UserControl x:Class="PlanCheck.CheckScreen_Global"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:PlanCheck_IUCT"
+             xmlns:local="clr-namespace:PlanCheck"
              mc:Ignorable="d" 
              d:DesignHeight="120" d:DesignWidth="800" Background="AliceBlue"
              Style="{x:Null}">
