--- a/xaml_datas/MainWindow.xaml
+++ b/xaml_datas/MainWindow.xaml
@@ -1,15 +1,15 @@
-﻿<Window x:Class="PlanCheck_IUCT.MainWindow"
+﻿<Window x:Class="PlanCheck.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PlanCheck_IUCT"
+        xmlns:local="clr-namespace:PlanCheck"
         mc:Ignorable="d"
-        Title="PlanCheck_IUCT"        
+        Title="PlanCheck"        
         WindowState="Maximized"
         Style="{x:Null}" >
     <!--  Background="Aquamarine" -->
-    <!-- Title="PlanCheck_IUCT" Height="900" Width="1400" /-->
+    <!-- Title="PlanCheck " Height="900" Width="1400" /-->
 
     <Grid Style="{x:Null}" >
         <!-- Grid.Background>
@@ -106,11 +106,12 @@
                     </ListView>
                 </StackPanel>
 
-                <StackPanel Style="{x:Null}" Height="60">
+                <StackPanel Style="{x:Null}" Height="150">
                     <!-- ADD A SPACING -->
                 </StackPanel>
-
-
+                <StackPanel Style="{x:Null}" Height="60" Width="800">
+                    <Button Style="{x:Null}"  x:Name="exportPDF_button" Content="PDF" Visibility="Hidden" FontSize="16" FontFamily="Bauhaus" Click="exportPDF_button_Click" Width="50" Height="32" Background="LightGray" VerticalAlignment="Top" HorizontalAlignment="Right" ToolTip="Export des résultats en pdf" />
+                </StackPanel>
                 <!--<StackPanel Height="30" Width="800" VerticalAlignment="Bottom">
                     <Button Content="?" FontSize="10" FontFamily="Bauhaus" Click="Button_Click_help" Width="15" Height="20" Background="Coral" VerticalAlignment="Bottom" HorizontalAlignment="Right" />
 
